force-app/main/default/objects/AccountNews__c/AccountNews__c.object-meta.xml
<CustomObject>
    <description>Per-account research findings produced as part of a NewsOfTheWeek run.</description>
    <label>Account News</label>
    <nameField>
        <displayFormat>AN-{0000}</displayFormat>
        <label>Account News Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account News</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>