force-app/main/default/objects/AccountNews__c/fields/News__c.field-meta.xml
<CustomField>
    <fullName>News__c</fullName>
    <description>Commercially relevant findings about this account from the web research pass.</description>
    <label>News</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>