force-app/main/default/objects/AccountNews__c/fields/News_Of_The_Week__c.field-meta.xml
<CustomField>
    <fullName>News_Of_The_Week__c</fullName>
    <label>News Of The Week</label>
    <referenceTo>NewsOfTheWeek__c</referenceTo>
    <relationshipLabel>Account News</relationshipLabel>
    <relationshipName>AccountNews</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>