force-app/main/default/objects/AccountNews__c/fields/News_Run__c.field-meta.xml
<CustomField>
    <fullName>News_Run__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The archived run this news belongs to. Set when the run completes and the record is moved off the live config.</description>
    <label>News Run</label>
    <referenceTo>NewsRun__c</referenceTo>
    <relationshipLabel>Account News</relationshipLabel>
    <relationshipName>AccountNews</relationshipName>
    <type>Lookup</type>
</CustomField>