force-app/main/default/objects/AccountNews__c/fields/Sources__c.field-meta.xml
<CustomField>
    <fullName>Sources__c</fullName>
    <description>Citations / source URLs returned by the web grounding pass.</description>
    <label>Sources</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>